<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="btn_OK">OK</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_Continue">Continue</string>
    <string name="btn_Finish">Finish</string>
    <string name="btn_Select">Select</string>
    <string name="btn_None">None</string>
    <string name="app_name">LiteNote</string>
    <string name="mark_handler">mark_handler</string>
    <string name="note_text">text</string>
    <string name="note_camera_picture">Camera picture</string>
    <string name="note_ready_picture">Ready picture</string>
    <string name="note_audio">Audio</string>
    <string name="drag_handler">drag_handler</string>
    <string name="add_new_note">Add new note</string>
    <string name="add_new_note_top">To the top</string>
    <string name="add_new_note_bottom">To the bottom</string>
    <string name="add_new_note_optional">Optional</string>
    <string name="add_new_note_option_title">Add new note:</string>
    <string name="add_new_note_notice_title">Notice</string>
    <string name="add_new_note_notice_message">You can restore [Optional] option in [Add new note location] setting</string>
    <string name="note_take_picture">Take Picture</string>
    <string name="note_take_picture_OK">finished</string>
    <string name="note_cancel_add_new">Cancel</string>
    <string name="note_take_picture_continue_dlg_title">Continue Taking Picture?</string>
    <string name="note_reday_picture_continue_dlg_title">Continue selecting ready picture?</string>
    <string name="add_new_page">Add page</string>
    <string name="add_new_page_select_position">Select position</string>
    <string name="add_new_page_leftmost">To leftmost</string>
    <string name="add_new_page_rightmost">To rightmost</string>
    <string name="change_page_color">Page Color</string>
    <string name="rearrange_page">Page order</string>
    <string name="rearrange_page_title">Change current page order</string>
    <string name="rearrange_page_left">Left</string>
    <string name="rearrange_page_right">Right</string>
    <string name="checked_notes">Select notes</string>
    <string name="checked_notes_check_all">Select all</string>
    <string name="checked_notes_uncheck_all">Deselect all</string>
    <string name="checked_notes_move_to">Move to</string>
    <string name="checked_notes_move_to_dlg">Move selected notes to</string>
    <string name="checked_notes_copy_to">Copy to</string>
    <string name="checked_notes_copy_to_dlg">Copy selected notes to:</string>
    <string name="checked_notes_delete">Delete selected</string>
    <string name="checked_notes_slide_show">Slide show</string>
    <string name="slide_show_add_music">Add music</string>   
    <string name="slide_show_chooser_music">Select music</string>    
    <string name="menu_button_play">Play</string>
    <string name="menu_button_play_audio">Play audio</string>
    <string name="menu_button_continue_play_audio">Continue playing audio</string>
    <string name="menu_button_pause_audio">Pause audio</string>
    <string name="menu_button_stop_audio">Stop audio</string>
    <string name="menu_button_slide_show">Slide show</string>
    <string name="preview_note_body_yes">With preview</string>
    <string name="preview_note_body_no">No preview</string>
    <string name="draggable_yes">Draggable</string>
    <string name="draggable_no">Not draggable</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="add_new_note_title">Add new note</string>
    <string name="add_new_note_message">Note content:</string>
    <string name="add_new_note_button_add">Add</string>
    <string name="add_new_note_confirm_save">The new note has contained content, do you want to save it?</string>
    <string name="delete_checked_note_title">Delete selected</string>
    <string name="delete_checked_message">The selected notes will be deleted.</string>
    <string name="delete_checked_no_checked_items">No selected item.</string>
    <string name="edit_note_title">Edit the note</string>
    <string name="edit_note_message">Note content:</string>
    <string name="edit_note_button_save">OK</string>
    <string name="edit_note_button_back">Cancel</string>
    <string name="edit_note_confirm_update">Current note has been changed, do you want to update it?</string>
    <string name="edit_note_button_delete">Delete</string>
    <string name="edit_note_set_picture_dlg_title">Set picture</string>
    <string name="edit_note_set_audio_dlg_title">Set audio</string>
    <string name="view_note_title">View note</string>
    <string name="view_note_button_back">Back</string>
    <string name="view_note_button_edit">Edit</string>
    <string name="view_note_mode">View mode</string>
    <string name="view_note_mode_all">All</string>
    <string name="view_note_mode_picture">Picture</string>
    <string name="view_note_mode_text">Text</string>
    <string name="confirm_dialog_title">Confirmation</string>
    <string name="confirm_dialog_message">Do you want to delete this note?</string>
    <string name="confirm_dialog_message_page">Do you want to delete this page?</string>
    <string name="confirm_dialog_button_no">No</string>
    <string name="confirm_dialog_button_yes">Yes</string>
    <string name="footer_checked">Selected</string>
    <string name="footer_total">Total</string>
    <string name="config_confirm_taken_picture">Show imported picture:</string>
    <string name="config_delete_warning">Need confirmation before deleting</string>
    <string name="config_warning_title">Enabled items:</string>
    <string name="config_checkbox_warn_delete_note">A single note</string>
    <string name="config_checkbox_warn_delete_page">A page of notes</string>
    <string name="config_checkbox_warn_delete_checked">The selected notes in current page</string>
    <string name="config_set_vibration_title">Enable vibration to remind deleting: </string>
    <string name="config_status_enabled">Enabled</string>
    <string name="config_status_disabled">Disabled</string>
    <string name="config_set_style_title">New page background color:</string>
    <string name="config_add_new_note_location">Add new note location</string>
    <string name="config_delete_DB_title">Delete all pages</string>
    <string name="config_delete_DB_btn">delete</string>
    <string name="config_delete_DB_confirm_content">Are you sure to delete all pages?</string>
    <string name="config_delete_DB_toast">All pages have been deleted.</string>
    <string name="config_export_SDCard_title">Export notes to SD card</string>
    <string name="config_export_SDCard_btn">export</string>
    <string name="config_export_SDCard_toast">Export notes to SD card: OK</string>
    <string name="config_export_none_toast">No note yet</string>
    <string name="config_export_SDCard_edit_filename">Edit file name</string>
    <string name="config_SDCard_filename">file name: </string>
    <string name="config_SDCard_file_content">File content: </string>
    <string name="config_import_SDCard_entry">Import notes from SD card</string>
    <string name="config_import_SDCard_title">Select file to import:</string>
    <string name="config_import_SDCard_confirm_title">Confirm to import selected:</string>
    <string name="config_select_pages_title">Select pages:</string>
    <string name="mail_notes_title">Mail note pages (text))</string>
    <string name="mail_notes_btn">Send</string>
    <string name="mail_notes_dlg_title">Mail notes</string>
    <string name="mail_notes_dlg_message">Reveiver e-Mail address:</string>
    <string name="mail_chooser_title">Choose eMail application</string>
    <string name="mail_exit">End eMail</string>
    <string name="eMail_subject">Mail notes</string>
    <string name="eMail_body">the attachment and the following text comes from</string>
    <string name="eMail_chooser_dlg_title">Send mail by:</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_toast_no_file">No file yet, please create one first</string>
    <string name="config_button_back">Back</string>
    <string name="edit_page_tab_title">Edit the tab name</string>
    <string name="edit_page_tab_message">Tab name:</string>
    <string name="edit_page_button_update">OK</string>
    <string name="edit_page_button_delete">Delete</string>
    <string name="edit_page_button_ignore">Cancel</string>
    <string name="edit_page_color_title">Set color:</string>
    <string name="file_not_found">File is not found</string>
    <string name="audio_file_not_found">Audio file not found or not selected</string>
    <string name="file_is_not_created">File is not created</string>
    <string name="toast_keep_one_page">Please keep one page at least.</string>
    <string name="toast_leftmost">Leftmost</string>
    <string name="toast_rightmost">Rightmost</string>
    <string name="toast_no_email_address">No e-Mail address</string>
    <string name="toast_import_SDCard_no_file">No file yet, please export one first</string>
    <string name="toast_import_finished">The selected file has been imported</string>
    <string name="toast_input_filename">Please input a file name</string>
    <string name="toast_saved">Saved</string>
    <string name="edit_note_dlg_title">Title:</string>
    <string name="edit_note_dlg_body">Body:</string>
    <string name="slide_action_previous">Previous</string>
    <string name="slide_action_next">Next</string>
    <string name="slide_action_finish">Last</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    </resources>